--- a/yocto-build.sty
+++ b/yocto-build.sty
@@ -1,3 +1,8 @@
+Recommend PC performance requirement:
+1. 32GB memory is Recommend. 45GB or above swap space is better reserved.
+2. When building with imx-image-full image, qt6 is included. Yocto build would require
+   appropriate 300GB hdd/ssd storage space. 512GB above storage device is recommended
+
 sudo apt install gawk wget git diffstat unzip texinfo gcc build-essential chrpath socat cpio python-is-python3 python3 python3-pip python3-pexpect xz-utils debianutils iputils-ping python3-git python3-jinja2 libegl1-mesa libsdl1.2-dev python3-subunit mesa-common-dev zstd liblz4-tool file locales -y
 
 sudo apt install zstd lz4 -y
@@ -9,8 +14,9 @@ curl https://storage.googleapis.com/git-repo-downloads/repo > ~/bin/repo
 chmod a+x ~/bin/repo
 
 export PATH=~/bin:$PATH
-alias python='python3'
-alias pip='pip3'
+# replaced by install python-is-python3 package
+#alias python='python3'  # or ln -sn /usr/bin/python3 /usr/bin/python
+#alias pip='pip3'
 
 git config --global user.name "Jordan Pan"
 git config --global user.email "pan.jordan@gmail.com"
@@ -21,6 +27,14 @@ cd imx-yocto-bsp
 repo init -u https://github.com/nxp-imx/imx-manifest -b imx-linux-mickledore -m imx-6.1.36-2.1.0.xml
 repo sync
 
-DISTRO=fsl-imx-wayland MACHINE=imx8mqevk  source imx-setup-release.sh -b build-imx8mqevk
+DISTRO=fsl-imx-wayland MACHINE=imx8ulpevk  source imx-setup-release.sh -b build-imx8mqevk
 
 bitbake imx-image-core
+
+Cautions:
+1. Recommend to fetch all codes before build process to avoid fail fetch code by network situation
+2. imx-image-core / imx-image-multimedia / imx-image-full has been build verified
+3. imx-image-full has bug in qtbase do_install stage
+    refer to https://community.nxp.com/t5/i-MX-Processors/building-the-full-image-imx93evk/td-p/1736785
+    issue resolved by add the command "chown -R root.root ${D}${libdir}" in section "do_install" in the
+    recipe qtbase_git.bb, located on the path: ../sources/meta-qt6/recipes-qt/qt6
